--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tanstack/router-devtools": "^1.91.3",
+    "@tanstack/router-plugin": "^1.91.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
