--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.91.3",
+    "@tanstack/react-router": "^1.95.3",
+    "@tanstack/start": "^1.95.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vinxi": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
